--- a/Desktop/EcuaprestApp/templates/comprobante_pago.html
+++ b/Desktop/EcuaprestApp/templates/comprobante_pago.html
@@ -45,11 +45,11 @@
   <div class="info"><strong>Nombre:</strong> {{ cliente.name }}</div>
   <div class="info"><strong>Cédula:</strong> {{ cliente.cedula }}</div>
   <div class="info"><strong>Numero de cuenta:</strong> {{ cliente.numero_cuenta }}</div>
-  <div class="info"><strong>Correo:</strong> {{ cliente.correo }}</div>
+  <div class="info"><strong>Numero de contrato:</strong>{{ cliente.contrato }}</div>
   <div class="info"><strong>Fecha de Pago:</strong> {{ pago.fecha_pago.strftime('%d/%m/%Y %H:%M') }}</div>
   <div class="info"><strong>Monto del Abono:</strong> ${{ pago.abono }}</div>
   <div class="info"><strong>Deuda Restante:</strong> ${{ deuda.deuda_total}}</div>
-
+  <div class="info"><strong>Correo:</strong> {{ cliente.correo }}</div>
   <button onclick="window.print()" class="btn-imprimir">Imprimir Comprobante</button>
 <a href="{{ url_for('clientes') }}" class="btn-imprimir" style="background-color: #6c757d; text-align: center; text-decoration: none; display: inline-block;">
   Volver al Inicio
