--- a/Desktop/EcuaprestApp/templates/base.html
+++ b/Desktop/EcuaprestApp/templates/base.html
@@ -276,6 +276,7 @@
   <!-- Custom js for this page-->
   <script src="static/js/dashboard.js"></script>
   <script src="static/js/actividades.js"></script>
+  <script src="static/js/pcobranza.js"></script>
   <script src="static/js/Chart.roundedBarCharts.js"></script>
   <script src="static/js/calendar.js"></script>
   <!-- End custom js for this page-->
