--- a/Desktop/EcuaprestApp/templates/index.html
+++ b/Desktop/EcuaprestApp/templates/index.html
@@ -208,52 +208,31 @@
             <div class="card card-rounded">
               <div class="card-body card-rounded">
                 <h4 class="card-title  card-title-dash">Proximas cobranzas</h4>
-                <div class="list align-items-center border-bottom py-2">
-                  <div class="wrapper w-100">
-                    <p class="mb-2 font-weight-medium">
-                      Cliente 1
-                    </p>
-                    <div class="d-flex justify-content-between align-items-center">
-                      <div class="d-flex align-items-center">
-                        <i class="mdi mdi-calendar text-muted me-1"></i>
-                        <p class="mb-0 text-small text-muted">Mar 14, 2025</p>
+                <div class="flex-grow-1 overflow-auto">
+                  {% for c in c %}
+                  <div class="list align-items-center border-bottom py-2 cobranza-item">
+                    <div class="wrapper w-100">
+                      <p class="mb-2 font-weight-medium">
+                        {{c.nombre}}
+                      </p>
+                      <div class="d-flex justify-content-between align-items-center">
+                        <div class="d-flex align-items-center">
+                          <i class="mdi mdi-calendar text-muted me-1"></i>
+                          <p class="mb-0 text-small text-muted">{{c.fecha_calculada}}</p>
+                        </div>
+                      </div>
+                      <div class="d-flex justify-content-between align-items-center">
+                        <div class="d-flex align-items-center">
+                          <p class="mb-0 text-small text-muted">Pago en {{c.dias_restantes}} dias</p>
+                        </div>
                       </div>
                     </div>
                   </div>
+                  {% endfor %}
                 </div>
-                <div class="list align-items-center border-bottom py-2">
-                  <div class="wrapper w-100">
-                    <p class="mb-2 font-weight-medium">
-                      Cliente 2
-                    </p>
-                    <div class="d-flex justify-content-between align-items-center">
-                      <div class="d-flex align-items-center">
-                        <i class="mdi mdi-calendar text-muted me-1"></i>
-                        <p class="mb-0 text-small text-muted">Mar 14, 2025</p>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="list align-items-center border-bottom py-2">
-                  <div class="wrapper w-100">
-                    <p class="mb-2 font-weight-medium">
-                      Cliente 3
-                    </p>
-                    <div class="d-flex justify-content-between align-items-center">
-                      <div class="d-flex align-items-center">
-                        <i class="mdi mdi-calendar text-muted me-1"></i>
-                        <p class="mb-0 text-small text-muted">Mar 14, 2025</p>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="list align-items-center pt-3">
-                  <div class="wrapper w-100">
-                    <p class="mb-0">
-                      <a href="#" class="fw-bold text-primary">Ver mas <i class="mdi mdi-arrow-right ms-2"></i></a>
-                    </p>
-                  </div>
-                </div>
+                <nav>
+                  <ul id="paginacion-cobranzas" class="pagination justify-content-center"></ul>
+                </nav>                
               </div>
             </div>
           </div>
@@ -346,7 +325,6 @@
             </div>
           </div>
         </div>
-
       </div>
     </div>
   </div>
