--- a/Desktop/EcuaprestApp/static/css/amortizacion.css
+++ b/Desktop/EcuaprestApp/static/css/amortizacion.css
@@ -61,7 +61,7 @@
     padding: 10px;
     font-size: 16px;
     color: white;
-    background-color: #02b5b5;
+    background-color: rgb(31, 59, 179);
     border: none;
     border-radius: 4px;
     cursor: pointer;
@@ -69,7 +69,7 @@
   }
   
   .calculator-form .simulate-btn:hover {
-    background-color: #02b5b5;
+    background-color: rgb(31, 59, 179);
   }
   
   /* Tabla de amortización */
@@ -95,7 +95,7 @@
   }
   
   .amortization-table thead {
-    background-color: #02b5b5;
+    background-color: rgb(31, 59, 179);
     color: white;
   }
   
